Name:                mix-assembler
Version:             0.1
Synopsis:            Assembler for the MIXAL language of the MIX
                     machine in Donald Knuth's The Art of Computer
                     Programming.
License:             BSD3
License-file:        LICENSE
Author:              Jonathan Daugherty <jtd@galois.com>
Maintainer:          Jonathan Daugherty <jtd@galois.com>
Copyright:           Jonathan Daugherty, 2012
Category:            System
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Hs-source-dirs:    src
  GHC-Options:       -Wall

  Exposed-modules:
    MIX.Assembler
    MIX.Assembler.PP
    MIX.Assembler.Char
    MIX.Assembler.MIXWord

  Build-depends:
    base >= 4,
    parsec,
    mtl,
    pretty,
    array,
    language-mixal

Executable mix-as
  Hs-Source-Dirs:    src
  Main-is:           Main.hs
  GHC-Options:       -Wall
  Build-Depends:
    base,
    parsec,
    mtl,
    pretty,
    array,
    mix-assembler,
    language-mixal

Executable mix-as-tests
  Hs-Source-Dirs:    tests
  Main-is:           TestDriver.hs
  GHC-Options:       -Wall

  Other-Modules:
    Tests.MIXWord

  Build-Depends:
    base,
    parsec,
    mtl,
    pretty,
    test-framework,
    test-framework-quickcheck2,
    QuickCheck,
    mix-assembler,
    language-mixal